Typo in exercise 6.6

--- a/GESPRG_practicumdocument.tex
+++ b/GESPRG_practicumdocument.tex
@@ -5,7 +5,7 @@
 %%
 %%   GESPRG_practicumdocument - Exercises for programming in C
 %%
-%%   (c) 2020  --  The Hague University of Applied Sciences (THUAS)
+%%   (c) 2021  --  The Hague University of Applied Sciences (THUAS)
 %%
 %%   Please mail your comments to: J.E.J.opdenBrouw@hhs.nl
 %%
@@ -14,7 +14,7 @@
 
 \documentclass[a4paper,10pt,fleqn,twoside]{article}
 
-\def\version{1.9999$\varepsilon$}
+\def\version{1.9999$\zeta$}
 
 \usepackage{siunitx}
 \sisetup{output-decimal-marker = {,}}
@@ -2796,7 +2796,7 @@ Schrijf een programma dat de regels in een tekstbestand inleest en op lengte sor
 Schrijf een programma dat de woorden in een tekstbestand op alfabet sorteert. Het resultaat schrijf je naar het scherm en naar een uitvoerbestand. De namen van de tekstbestanden moeten als argumenten op de command-line*) meegegeven worden.
 
 \subsection{Regelnummering}
-Schrijf een programma dat een tekstbestand inleest (bijv.\@ een C-file) en hier regelnummers aan toevoegt en naar een uitvoertekstbestand schrijft. Lege regels worden niet genummerd, maar worden wel naar het uitvoerbestand geschreven. De regelnummers komen aan de linkerkant te staan. Gebruik een invoerbestand van minimaal 100 regels tekst en lever dit bestand ook in. De van de bestanden moeten als argumenten op de command-line*) meegegeven worden.
+Schrijf een programma dat een tekstbestand inleest (bijv.\@ een C-file) en hier regelnummers aan toevoegt en naar een uitvoertekstbestand schrijft. Lege regels worden niet genummerd, maar worden wel naar het uitvoerbestand geschreven. De regelnummers komen aan de linkerkant te staan. Gebruik een invoerbestand van minimaal 100 regels tekst en lever dit bestand ook in. De namen van de bestanden moeten als argumenten op de command-line*) meegegeven worden.
 
 \subsection{Getallen sorteren }
 Schrijf een programma dat twee tekstbestanden met ongesorteerde integer getallen samenvoegt tot een derde gesorteerd bestand met integers. Alle drie bestandsnamen worden als argumenten op de command-line*) meegegeven.
