Laatste revisie van dit document. Vak wordt volgend jaar in een andere vorm gegeven.

--- a/GESPRG_practicumdocument.tex
+++ b/GESPRG_practicumdocument.tex
@@ -14,7 +14,7 @@
 
 \documentclass[a4paper,10pt,fleqn,twoside]{article}
 
-\def\version{1.9999$\zeta$}
+\def\version{1.9999}
 
 \usepackage{siunitx}
 \sisetup{output-decimal-marker = {,}}
@@ -575,8 +575,12 @@ splittopskip = \topskip,%
 \tableofcontents
 
 \vfill
+Noot: dit document wordt niet meer gebruikt omdat het vak een andere inhoud heeft gekregen.
+
+\vspace*{10pt}
+
 Dit document is gemaakt door J.F. Theinert, W. Muhammad, B. Kuiper, M.J.A.J. Schrauwen, J.Z.M. Broeders en J.E.J. op den Brouw.
-Opmerkingen, suggesties en bugs kunnen worden gemaild naar \href{mailto:J.E.J.opdenBrouw@hhs.nl}{J.E.J.opdenBrouw@hhs.nl}
+Opmerkingen kunnen worden gemaild naar \href{mailto:J.E.J.opdenBrouw@hhs.nl}{J.E.J.opdenBrouw@hhs.nl}
 
 
 
